removed rows margin to prevent white space over flow

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -337,6 +337,9 @@ width: 100%
     }
 }
 
+.homepage .category .card{
+    margin: 10px;
+}
 .activities{
     color : #535353
 }
